--- a/.htaccess
+++ b/.htaccess
@@ -71,7 +71,16 @@
 # MIME Types
 <IfModule mod_mime.c>
   AddType application/javascript js
+  AddType application/javascript mjs
+  AddType text/javascript js
   AddType text/css css
   AddType image/svg+xml svg
+  AddType application/json json
+  AddType application/manifest+json webmanifest
 </IfModule>
+
+# Ensure JavaScript modules are served correctly
+<FilesMatch "\.(js|mjs)$">
+  Header set Content-Type "application/javascript; charset=utf-8"
+</FilesMatch>
 
